--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -874,7 +874,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
-    { id:4, name:'Luisja', pos:'Defensa', status:'Duda', special: false, performances:[
+    { id:4, name:'Luisja', pos:'Defensa', status:'Lesionado', special: false, performances:[
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,2)'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
@@ -1202,7 +1202,7 @@
     { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
     { playerId: 10, title: 'Duda', text: "Sobrecarga, 5-10 días" },
     { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ10.html' },
-    { playerId: 4, title: 'Duda', text: "Molestias musculares, 1-3 semanas" },
+    { playerId: 4, title: 'Lesión', text: "Molestias musculares, 1-3 semanas" },
     { playerId: null, title: 'Jornada 9', text: "EE PP San Fernando Escolapios Pozuelo 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ9.html' },
     { playerId: 16, title: 'Duda', text: "Lesión en los isquios, desconocido" },
     { playerId: null, title: 'Jornada 8', text: "E.F.M.O. Boadilla 'B' 2-2 CDE Aupa - Mentema Boadilla 'A'", url: 'InformeJ8.html' },
