--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1201,7 +1201,7 @@
   const news = [
     { playerId: 5, title: 'Duda', text: "Desconocido" },
     { playerId: 23, title: 'Lesión', text: "Fisura de peroné, 1-3 meses" },
-    { playerId: 2, title: 'Duda', text: "Molestias en la cadera, 6-10 días" },
+    { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" },
     { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
     { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ10.html' },
     { playerId: 4, title: 'Lesión', text: "Molestias musculares, 1-3 semanas" },
