--- a/InformeJ12.html
+++ b/InformeJ12.html
@@ -643,20 +643,20 @@
           { number: '13', name: 'Álvaro' }
         ],
         'defensas': [
-          { number: '7', name: 'J. Martínez' },
+          { number: '20', name: 'A. Molina' },
           { number: '5', name: 'Adriano' },
-          { number: '6', name: 'Rafa Crooke' },
+          { number: '25', name: 'Rodri' },
           { number: '17', name: 'J. Zarcero' }
         ],
         'mediocentros': [
-          { number: '10', name: 'Kito' },
-          { number: '2', name: 'Á. Brito' },
+          { number: '8', name: 'Rodri de Castro' },
+          { number: '3', name: 'Mario' },
           { number: '14', name: 'J. Ogayar' },
           { number: '19', name: 'Pablo' },
           { number: '23', name: 'Javi Pardo' }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán' }
+          { number: '24', name: 'H. Panizo' }
         ]
       };
 
