--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -155,10 +155,17 @@
 
 <section class="timeline">
   <div class="card">
+    <img src="Jornada13.jpg" alt="Jornada 13">
+    <div class="info">
+      <h2>Jornada 13</h2>
+      <a href="InformeJ13.html">Ver Alineación Probable</a>
+    </div>
+  </div>
+  <div class="card">
     <img src="Jornada12.jpg" alt="Jornada 12">
     <div class="info">
       <h2>Jornada 12</h2>
-      <a href="InformeJ12.html">Ver Alineación Probable</a>
+      <a href="InformeJ12.html">Ver Informe</a>
     </div>
   </div>
   <div class="card">
