--- a/InformeJ13.html
+++ b/InformeJ13.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Informe Jornada 12</title>
+  <title>Informe Jornada 13</title>
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
@@ -617,8 +617,8 @@
   <a href="InformesPost_partido.html" class="btn-volver">← Volver a Todos los Informes</a>
 
   <div class="header-informe">
-    <h1>Informe Jornada 12</h1>
-    <div class="resultado-principal">EFMO Boadilla 'B' - UD Las Matas CF</div>
+    <h1>Informe Jornada 13</h1>
+    <div class="resultado-principal">CDE Colegio Juan Pablo II - EFMO Boadilla 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
