--- a/InformeJ12.html
+++ b/InformeJ12.html
@@ -740,7 +740,7 @@
           { number: '13', name: 'Álvaro', rating: '5,0', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '17', name: 'J. Zarcero', rating: '6,4', goals: 0, assists: 0, cards: null },
+          { number: '17', name: 'J. Zarcero', rating: '6,2', goals: 0, assists: 0, cards: null },
           { number: '5', name: 'Adriano', rating: '5,8', goals: 0, assists: 0, cards: null },
           { number: '25', name: 'Rodri', rating: '5,6', goals: 0, assists: 0, cards: null },
           { number: '20', name: 'A. Molina', rating: '6,8', goals: 0, assists: 1, cards: null }
@@ -928,13 +928,7 @@
     <h3>Goles a Favor</h3>
     <div class="goles-lista">
       <div class="gol">
-        <span class="minuto">48'</span> - S. Griñán <!-- (Asistencia: Kito) -->
-      </div>
-      <div class="gol">
-        <span class="minuto">62'</span> - S. Griñán (Asistencia: Kito)
-      </div>
-      <div class="gol">
-        <span class="minuto">90'</span> - Kito
+        <span class="minuto">26'</span> - J. Ogayar (Asistencia: A. Molina)
       </div>
     </div>
   </div> 
@@ -944,15 +938,7 @@
     <h3>Cambios Realizados</h3>
     <div class="cambios-lista">
       <div class="cambio">
-        <span class="minuto">45'</span>
-        <div class="jugadores-cambio">
-          <span>Víctor Jaén</span>
-          <span class="flecha">→</span>
-          <span>Á. Brito</span>
-        </div>
-      </div>
-      <div class="cambio">
-        <span class="minuto">45'</span>
+        <span class="minuto">57'</span>
         <div class="jugadores-cambio">
           <span>Rodri de Castro</span>
           <span class="flecha">→</span>
@@ -960,37 +946,20 @@
         </div>
       </div>
       <div class="cambio">
-        <span class="minuto">45'</span>
+        <span class="minuto">74'</span>
         <div class="jugadores-cambio">
-          <span>Manu Medina</span>
-          <span class="flecha">→</span>
           <span>Javi Pardo</span>
+          <span class="flecha">→</span>
+          <span>Víctor Jaén</span>
         </div>
       </div>
       <div class="cambio">
-        <span class="minuto">82'</span>
+        <span class="minuto">74'</span>
         <div class="jugadores-cambio">
-          <span>Pablo</span>
-          <span class="flecha">→</span>
-          <span>Mario</span>
-        </div>
-      </div>
-      <div class="cambio">
-        <span class="minuto">82'</span>
-        <div class="jugadores-cambio">
-          <span>J. Ogayar</span>
-          <span class="flecha">→</span>
           <span>H. Panizo</span>
-        </div>
-      </div>
-      <div class="cambio">
-        <span class="minuto">87'</span>
-        <div class="jugadores-cambio">
-          <span>J. Martínez</span>
           <span class="flecha">→</span>
-          <span>A. Molina</span>
+          <span>S. Griñán</span>
         </div>
-      </div>
     </div>
   </div>
 
@@ -1013,20 +982,20 @@
       // Datos de los jugadores organizados por posición - ONCE FINAL
       const playersFinal = {
         'portero': [
-          { number: '1', name: 'Gabri' }
+          { number: '13', name: 'Álvaro' }
         ],
         'defensas': [
-          { number: '20', name: 'A. Molina' },
+          { number: '17', name: 'J. Zarcero' },
           { number: '5', name: 'Adriano' },
-          { number: '6', name: 'Rafa Crooke' },
-          { number: '17', name: 'J. Zarcero' }
+          { number: '25', name: 'Rodri' },
+          { number: '20', name: 'A. Molina' }
         ],
         'mediocentros': [
           { number: '10', name: 'Kito' },
-          { number: '2', name: 'Á. Brito' },
-          { number: '23', name: 'Javi Pardo' },
+          { number: '19', name: 'Pablo' },
           { number: '3', name: 'Mario' },
-          { number: '24', name: 'H. Panizo' }
+          { number: '23', name: 'Víctor Jaén' },
+          { number: '24', name: 'J. Ogayar' }
         ],
         'delanteros': [
           { number: '9', name: 'S. Griñán' }
