--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -843,6 +843,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
@@ -857,7 +858,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
         {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
     { id:3, name:'Álvaro', pos:'Portero', status:'Duda', special: false, performances:[
@@ -871,7 +873,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:80, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
+        {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,0)'}
       ]},
 
     { id:4, name:'Luisja', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -885,10 +888,11 @@
         {points:null, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (0,0+🅰️)'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
-    { id:5, name:'J. Martínez', pos:'Atacante', status:'Duda', special: false, performances:[
+    { id:5, name:'J. Martínez', pos:'Centrocampista', status:'Duda', special: false, performances:[
         {points:3, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,7)'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:9, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,3+⚽)'},
@@ -899,7 +903,8 @@
         {points:null, minutes:57, goals:0, assists:1, cards:1, comment:'🟨🅰️ (0,0+🅰️)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (-)'},
-        {points:null, minutes:87, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'}
+        {points:null, minutes:87, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:6, name:'Rafa Crooke', pos:'Defensa', status:'OK', special: false, performances:[
@@ -913,7 +918,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:7, name:'Jacobo', pos:'Defensa', status:'OK', special: false, performances:[
@@ -927,6 +933,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
@@ -941,7 +948,8 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:2, minutes:65, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
+        {points:-2, minutes:90, goals:0, assists:0, cards:0, comment:'(5,6)'}
       ]},
 
     { id:9, name:'Adriano', pos:'Defensa', status:'Duda', special: false, performances:[
@@ -955,7 +963,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,4+🅰️)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'}
       ]},
 
     { id:10, name:'Á. Infante', pos:'Defensa', status:'OK', special: false, performances:[
@@ -969,6 +978,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:3, minutes:25, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
@@ -983,7 +993,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:3, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:null, minutes:3, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
+        {points:null, minutes:3, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:5, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (6,8+🅰️)'}
       ]},
 
     { id:12, name:'L. Lausín', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -992,6 +1003,7 @@
         {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:3, minutes:19, goals:0, assists:0, cards:0, comment:'↩️ (6,6)'},
         {points:3, minutes:21, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -1011,7 +1023,8 @@
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,5+🅰️)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
+        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'}
       ]},
 
     { id:14, name:'Kito', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1025,7 +1038,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:7, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,4)'},
         {points:null, minutes:45, goals:0, assists:1, cards:0, comment:'↩️🅰️ (0,0+🅰️)'},
-        {points:null, minutes:45, goals:1, assists:1, cards:0, comment:'↩️⚽🅰️ (0,0+⚽+🅰️)'}
+        {points:null, minutes:45, goals:1, assists:1, cards:0, comment:'↩️⚽🅰️ (0,0+⚽+🅰️)'},
+        {points:3, minutes:33, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'}
       ]},
 
     { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1039,7 +1053,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
       ]},
 
     { id:16, name:'Á. Brito', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1053,7 +1068,8 @@
         {points:null, minutes:33, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
     { id:17, name:'Pablo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1067,7 +1083,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:11, minutes:70, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,4+⚽)'},
         {points:null, minutes:80, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
-        {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
+        {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'}
       ]},
 
     { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1081,7 +1098,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (0,0+⚽)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:1, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'}
       ]},
 
     { id:19, name:'Mario', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1095,7 +1113,8 @@
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
-        {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
+        {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,0)'}
       ]},
 
     { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1109,7 +1128,8 @@
         {points:null, minutes:66, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,7)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
+        {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:9, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,2+⚽)'}
       ]},
 
     { id:21, name:'Rodri de Castro', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1123,7 +1143,8 @@
         {points:null, minutes:24, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:5, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:3, minutes:57, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'}
       ]},
 
     { id:22, name:'H. Panizo', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1137,7 +1158,8 @@
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
+        {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:4, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'}
       ]},
 
     { id:23, name:'Manu Medina', pos:'Atacante', status:'Lesionado', special: false, performances:[
@@ -1151,13 +1173,15 @@
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:1, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
+        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
     { id:24, name:'Manu de Vicente', pos:'Atacante', status:'Duda', special: false, performances:[
         {points:1, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
         {points:null, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (Sin grabación)'},
         {points:1, minutes:27, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -1179,7 +1203,8 @@
         {points:null, minutes:90, goals:2, assists:0, cards:1, comment:'🟨⚽⚽ (0,0+⚽⚽)'},
         {points:8, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,0+⚽)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
-        {points:null, minutes:90, goals:2, assists:0, cards:0, comment:'⚽⚽ (0,0+⚽⚽)'}
+        {points:null, minutes:90, goals:2, assists:0, cards:0, comment:'⚽⚽ (0,0+⚽⚽)'},
+        {points:2, minutes:16, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', special: true, performances:[
@@ -1193,13 +1218,15 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
+        {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'En el JB'}
       ]}
   ];
 
   // 📰 Noticias del equipo
   const news = [
-    { playerId: 5, title: 'Duda', text: "Desconocido" },
+    { playerId: null, title: 'Jornada 12', text: "E.F.M.O. Boadilla 'B' 1-6 UD Las Matas CF", url: 'InformeJ12.html' },
+    { playerId: 5, title: 'Duda', text: "Lesión de tobillo, desconocido" },
     { playerId: 23, title: 'Lesión', text: "Fisura de peroné, 1-3 meses" },
     { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" },
     { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
