--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -862,7 +862,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
       ]},
 
-    { id:3, name:'Álvaro', pos:'Portero', status:'Duda', special: false, performances:[
+    { id:3, name:'Álvaro', pos:'Portero', status:'OK', special: false, performances:[
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
         {points:null, minutes:36, goals:0, assists:0, cards:0, comment:'↩️ (Sin grabación)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
@@ -877,7 +877,7 @@
         {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,0)'}
       ]},
 
-    { id:4, name:'Luisja', pos:'Defensa', status:'Lesionado', special: false, performances:[
+    { id:4, name:'Luisja', pos:'Defensa', status:'Duda', special: false, performances:[
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,2)'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
@@ -892,7 +892,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
-    { id:5, name:'J. Martínez', pos:'Centrocampista', status:'Duda', special: false, performances:[
+    { id:5, name:'J. Martínez', pos:'Centrocampista', status:'Lesionado', special: false, performances:[
         {points:3, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,7)'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:9, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,3+⚽)'},
@@ -1226,16 +1226,16 @@
   // 📰 Noticias del equipo
   const news = [
     { playerId: null, title: 'Jornada 12', text: "E.F.M.O. Boadilla 'B' 1-6 UD Las Matas CF", url: 'InformeJ12.html' },
-    { playerId: 5, title: 'Duda', text: "Lesión de tobillo, desconocido" },
+    { playerId: 5, title: 'Lesión', text: "Lesión de tobillo, desconocido" },
     { playerId: 23, title: 'Lesión', text: "Fisura de peroné, 1-3 meses" },
     { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" },
     { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
     { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ10.html' },
-    { playerId: 4, title: 'Lesión', text: "Molestias musculares, 1-3 semanas" },
+    { playerId: 4, title: 'Duda', text: "Molestias musculares, 1-3 semanas" },
     { playerId: null, title: 'Jornada 9', text: "EE PP San Fernando Escolapios Pozuelo 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ9.html' },
    // { playerId: 16, title: 'Duda', text: "Lesión en los isquios, desconocido" }, // Á. Brito
     { playerId: null, title: 'Jornada 8', text: "E.F.M.O. Boadilla 'B' 2-2 CDE Aupa - Mentema Boadilla 'A'", url: 'InformeJ8.html' },
-    { playerId: 3, title: 'Duda', text: "Esguince de tobillo y molestias en el cuello, desconocido" },
+   // { playerId: 3, title: 'Duda', text: "Esguince de tobillo y molestias en el cuello, desconocido" }, //Álvaro
     { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
    // { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, 3-4 semanas" }, //J. Pardo
    // { playerId: 6, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Rafa
