--- a/InformeJ8.html
+++ b/InformeJ8.html
@@ -759,7 +759,7 @@
       // Datos del banquillo - MODIFICADO: Agregar campo 'cards'
       const benchPlayers = [
         { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 1, cards: '🟨' },
+        { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: '🟨' },
         { number: '19', name: 'Pablo', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '23', name: 'Javi Pardo', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '8', name: 'Rodri de Castro', rating: '-', goals: 0, assists: 0, cards: null },
@@ -930,7 +930,7 @@
     <h3>Goles a Favor</h3>
     <div class="goles-lista">
       <div class="gol">
-        <span class="minuto">44'</span> - S. Griñán (Asistencia: J. Martínez)
+        <span class="minuto">44'</span> - S. Griñán
       </div>
       <div class="gol">
         <span class="minuto">63'</span> - S. Griñán (Asistencia: Luisja)
