--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -900,7 +900,7 @@
         {points:6, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,0+🅰️)'},
         {points:3, minutes:62, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,7)'},
         {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
-        {points:null, minutes:57, goals:0, assists:1, cards:1, comment:'🟨🅰️ (0,0+🅰️)'},
+        {points:null, minutes:52, goals:0, assists:0, cards:1, comment:'🟨 (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (-)'},
         {points:null, minutes:87, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
@@ -1065,7 +1065,7 @@
         {points:7, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (7,5)'},
         {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(8,7)'},
         {points:8, minutes:90, goals:0, assists:0, cards:0, comment:'(7,7)'},
-        {points:null, minutes:33, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:null, minutes:38, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
