--- a/Stats25-26.html
+++ b/Stats25-26.html
@@ -430,7 +430,7 @@
     {nombre: "J. Agudo", goles: 0, asistencias: 0, minutos: [0, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]},
     {nombre: "Gabri", goles: 0, asistencias: 0, minutos: [0, 0, 90, 0, 90, 0, 90, 0, 90, 10, 90, 0]},
     {nombre: "Álvaro", goles: 0, asistencias: 0, minutos: [90, 36, 0, 90, 0, 90, 0, 90, 0, 80, 0, 90]},
-    {nombre: "Luisja", goles: 0, asistencias: 1, minutos: [90, 90, 90, 90, 90, 90, 0, 90, 90, 0, 0, 0]}, //1 asistencia?
+    {nombre: "Luisja", goles: 0, asistencias: 1, minutos: [90, 90, 90, 90, 90, 90, 0, 90, 90, 0, 0, 0]},
     {nombre: "J. Martínez", goles: 1, asistencias: 0, minutos: [90, 90, 63, 90, 90, 62, 90, 52, 0, 90, 87, 0]},
     {nombre: "Rafa Crooke", goles: 0, asistencias: 0, minutos: [0, 26, 0, 90, 90, 90, 0, 0, 0, 90, 90, 0]},
     {nombre: "Jacobo", goles: 0, asistencias: 0, minutos: [0, 0, 63, 0, 0, 53, 0, 0, 0, 45, 0, 0]},
