--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -990,7 +990,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:2, minutes:2, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:11, minutes:61, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,6+⚽)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'},
         {points:3, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:3, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
@@ -1035,7 +1035,7 @@
         {points:2, minutes:68, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,5)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,0)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:5, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
         {points:7, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,4)'},
         {points:null, minutes:45, goals:0, assists:1, cards:0, comment:'↩️🅰️ (0,0+🅰️)'},
         {points:null, minutes:45, goals:1, assists:1, cards:0, comment:'↩️⚽🅰️ (0,0+⚽+🅰️)'},
@@ -1050,7 +1050,7 @@
         {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
         {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,1)'},
         {points:3, minutes:38, goals:0, assists:0, cards:0, comment:'↪️ (6,6)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:-1, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (5,9)'},
         {points:2, minutes:20, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:null, minutes:10, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
@@ -1065,7 +1065,7 @@
         {points:7, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (7,5)'},
         {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(8,7)'},
         {points:8, minutes:90, goals:0, assists:0, cards:0, comment:'(7,7)'},
-        {points:null, minutes:38, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:-1, minutes:38, goals:0, assists:0, cards:0, comment:'↪️ (5,8)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
