--- a/InformeJ8.html
+++ b/InformeJ8.html
@@ -741,15 +741,15 @@
         'defensas': [
           { number: '16', name: 'Luisja', rating: '-', goals: 0, assists: 1, cards: null },
           { number: '5', name: 'Adriano', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '2', name: 'Á. Brito', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '2', name: 'Á. Brito', rating: '5,8', goals: 0, assists: 0, cards: null },
           { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
         ],
         'mediocentros': [
-          { number: '10', name: 'Kito', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '21', name: 'Víctor Jaén', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '10', name: 'Kito', rating: '7,0', goals: 0, assists: 0, cards: null },
+          { number: '21', name: 'Víctor Jaén', rating: '5,9', goals: 0, assists: 0, cards: null },
           { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
           { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '20', name: 'A. Molina', rating: '6,7', goals: 0, assists: 0, cards: null }
         ],
         'delanteros': [
           { number: '9', name: 'S. Griñán', rating: '-', goals: 2, assists: 0, cards: '🟨' }
