--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1225,6 +1225,7 @@
 
   // 📰 Noticias del equipo
   const news = [
+    { playerId: null, title: 'Stats J8', text: "Estadísticas detalladas de la J8", url: 'StatsJ8.html' },
     { playerId: null, title: 'Jornada 12', text: "E.F.M.O. Boadilla 'B' 1-6 UD Las Matas CF", url: 'InformeJ12.html' },
     { playerId: 5, title: 'Lesión', text: "Lesión de tobillo, desconocido" },
     { playerId: 23, title: 'Lesión', text: "Fisura de peroné, 1-3 meses" },
