--- a/InformeJ8.html
+++ b/InformeJ8.html
@@ -748,7 +748,7 @@
           { number: '10', name: 'Kito', rating: '7,0', goals: 0, assists: 0, cards: null },
           { number: '21', name: 'Víctor Jaén', rating: '5,9', goals: 0, assists: 0, cards: null },
           { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '14', name: 'J. Ogayar', rating: '6,2', goals: 0, assists: 0, cards: null },
           { number: '20', name: 'A. Molina', rating: '6,7', goals: 0, assists: 0, cards: null }
         ],
         'delanteros': [
