--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1125,7 +1125,7 @@
         {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,6)'},
         {points:5, minutes:28, goals:0, assists:0, cards:0, comment:'↩️ (7,0)'},
         {points:8, minutes:61, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,4+🅰️)'},
-        {points:null, minutes:66, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
+        {points:1, minutes:66, goals:0, assists:0, cards:0, comment:'↪️ (6,2)'},
         {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,7)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
