--- a/StatsJ8.html
+++ b/StatsJ8.html
@@ -155,6 +155,30 @@
   </div>
 
   <div class="player-card">
+        <div class="player-header">
+            <div>
+                <span class="player-name">J. Ogayar</span>
+                <span class="player-pos">MC</span>
+            </div>
+            <div class="rating-badge">6.2</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">66</span></div>
+            <div class="stat-row"><span class="stat-label">Goles encajados</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">21/24</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">1/3</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">7</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">2/6</span></div>
+            <div class="stat-row"><span class="stat-label">Errores que llevan a disparo</span><span class="stat-value">1</span></div>
+        </div>
+    </div>
+  
+  <div class="player-card">
     <div class="player-header">
       <div>
         <span class="player-name">Molina</span>
