--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -870,7 +870,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,5)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:80, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
@@ -885,7 +885,7 @@
         {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'},
         {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(8,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (0,0+🅰️)'},
+        {points:11, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (8,0+🅰️)'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -900,7 +900,7 @@
         {points:6, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,0+🅰️)'},
         {points:3, minutes:62, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,7)'},
         {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
-        {points:null, minutes:52, goals:0, assists:0, cards:1, comment:'🟨 (-)'},
+        {points:7, minutes:52, goals:0, assists:0, cards:1, comment:'🟨 (7,4)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (-)'},
         {points:null, minutes:87, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
@@ -960,7 +960,7 @@
         {points:8, minutes:68, goals:0, assists:0, cards:0, comment:'↪️ (7,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'🟥 (7,0+🟥)'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,9)'},
         {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,4+🅰️)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
@@ -1020,7 +1020,7 @@
         {points:3, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'},
         {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,9)'},
         {points:6, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,3)'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
+        {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:8, minutes:90, goals:0, assists:1, cards:0, comment:'🅰️ (7,5+🅰️)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
@@ -1080,7 +1080,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:-1, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (5,8)'},
         {points:11, minutes:70, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,4+⚽)'},
         {points:null, minutes:80, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'},
         {points:null, minutes:82, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
@@ -1095,7 +1095,7 @@
         {points:4, minutes:69, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
         {points:9, minutes:28, goals:1, assists:0, cards:0, comment:'↩️⚽ (7,2+⚽)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:2, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (0,0+⚽)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
@@ -1140,7 +1140,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:3, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,7)'},
-        {points:null, minutes:24, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:2, minutes:24, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:5, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (7,0)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
@@ -1155,7 +1155,7 @@
         {points:6, minutes:68, goals:0, assists:0, cards:0, comment:'↪️ (7,2)'},
         {points:2, minutes:88, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
         {points:6, minutes:52, goals:0, assists:0, cards:0, comment:'↩️ (7,3)'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,9)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
@@ -1170,7 +1170,7 @@
         {points:2, minutes:22, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
-        {points:null, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (-)'},
+        {points:2, minutes:8, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:1, minutes:15, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (-)'},
@@ -1200,7 +1200,7 @@
         {points:11, minutes:90, goals:2, assists:0, cards:1, comment:'🟨⚽⚽ (7,0+⚽)'},
         {points:8, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,1+⚽)'},
         {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,8)'},
-        {points:null, minutes:90, goals:2, assists:0, cards:1, comment:'🟨⚽⚽ (0,0+⚽⚽)'},
+        {points:17, minutes:90, goals:2, assists:0, cards:1, comment:'🟨⚽⚽ (8,6+⚽⚽)'},
         {points:8, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,0+⚽)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'},
         {points:null, minutes:90, goals:2, assists:0, cards:0, comment:'⚽⚽ (0,0+⚽⚽)'},
