--- a/InformeJ8.html
+++ b/InformeJ8.html
@@ -736,13 +736,13 @@
       // MODIFICADO: Agregar campo 'cards' a cada jugador
       const playersConfirmada = {
         'portero': [
-          { number: '22', name: 'Álvaro', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '22', name: 'Álvaro', rating: '6,5', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: '-', goals: 0, assists: 1, cards: null },
-          { number: '5', name: 'Adriano', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '16', name: 'Luisja', rating: '8,0', goals: 0, assists: 1, cards: null },
+          { number: '5', name: 'Adriano', rating: '6,9', goals: 0, assists: 0, cards: null },
           { number: '2', name: 'Á. Brito', rating: '5,8', goals: 0, assists: 0, cards: null },
-          { number: '17', name: 'J. Zarcero', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '17', name: 'J. Zarcero', rating: '7,3', goals: 0, assists: 0, cards: null }
         ],
         'mediocentros': [
           { number: '10', name: 'Kito', rating: '7,0', goals: 0, assists: 0, cards: null },
@@ -752,19 +752,19 @@
           { number: '20', name: 'A. Molina', rating: '6,7', goals: 0, assists: 0, cards: null }
         ],
         'delanteros': [
-          { number: '9', name: 'S. Griñán', rating: '-', goals: 2, assists: 0, cards: '🟨' }
+          { number: '9', name: 'S. Griñán', rating: '8,6', goals: 2, assists: 0, cards: '🟨' }
         ]
       };
 
       // Datos del banquillo - MODIFICADO: Agregar campo 'cards'
       const benchPlayers = [
         { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '7', name: 'J. Martínez', rating: '-', goals: 0, assists: 0, cards: '🟨' },
-        { number: '19', name: 'Pablo', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '23', name: 'Javi Pardo', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '8', name: 'Rodri de Castro', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '24', name: 'H. Panizo', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '11', name: 'Manu Medina', rating: '-', goals: 0, assists: 0, cards: null }
+        { number: '7', name: 'J. Martínez', rating: '7,4', goals: 0, assists: 0, cards: '🟨' },
+        { number: '19', name: 'Pablo', rating: '5,8', goals: 0, assists: 0, cards: null },
+        { number: '23', name: 'Javi Pardo', rating: '6,5', goals: 0, assists: 0, cards: null },
+        { number: '8', name: 'Rodri de Castro', rating: '6,4', goals: 0, assists: 0, cards: null },
+        { number: '24', name: 'H. Panizo', rating: '6,9', goals: 0, assists: 0, cards: null },
+        { number: '11', name: 'Manu Medina', rating: '6,4', goals: 0, assists: 0, cards: null }
       ];
 
       // Configuraciones de formaciones
