--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -847,7 +847,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
-    { id:2, name:'Gabri', pos:'Portero', status:'Duda', special: false, performances:[
+    { id:2, name:'Gabri', pos:'Portero', status:'OK', special: false, performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
@@ -877,7 +877,7 @@
         {points:-3, minutes:90, goals:0, assists:0, cards:0, comment:'(5,0)'}
       ]},
 
-    { id:4, name:'Luisja', pos:'Defensa', status:'Duda', special: false, performances:[
+    { id:4, name:'Luisja', pos:'Defensa', status:'OK', special: false, performances:[
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,2)'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:4, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,8)'},
@@ -952,7 +952,7 @@
         {points:-2, minutes:90, goals:0, assists:0, cards:0, comment:'(5,6)'}
       ]},
 
-    { id:9, name:'Adriano', pos:'Defensa', status:'Duda', special: false, performances:[
+    { id:9, name:'Adriano', pos:'Defensa', status:'OK', special: false, performances:[
         {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
         {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
         {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
@@ -1147,7 +1147,7 @@
         {points:3, minutes:57, goals:0, assists:0, cards:0, comment:'↪️ (6,7)'}
       ]},
 
-    { id:22, name:'H. Panizo', pos:'Atacante', status:'OK', special: false, performances:[
+    { id:22, name:'H. Panizo', pos:'Atacante', status:'Lesionado', special: false, performances:[
         {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
         {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
         {points:4, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,9)'},
@@ -1177,7 +1177,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
-    { id:24, name:'Manu de Vicente', pos:'Atacante', status:'Duda', special: false, performances:[
+    { id:24, name:'Manu de Vicente', pos:'Atacante', status:'OK', special: false, performances:[
         {points:1, minutes:45, goals:0, assists:0, cards:0, comment:'↪️ (6,3)'},
         {points:null, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (Sin grabación)'},
         {points:1, minutes:27, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
@@ -1225,28 +1225,27 @@
 
   // 📰 Noticias del equipo
   const news = [
+    { playerId: 22, title: 'Lesión', text: "Esguince de tobillo, 1-3 semanas" },
     { playerId: null, title: 'Stats J8', text: "Estadísticas detalladas de la J8", url: 'StatsJ8.html' },
     { playerId: null, title: 'Jornada 12', text: "E.F.M.O. Boadilla 'B' 1-6 UD Las Matas CF", url: 'InformeJ12.html' },
     { playerId: 5, title: 'Lesión', text: "Lesión de tobillo, desconocido" },
     { playerId: 23, title: 'Lesión', text: "Fisura de peroné, 1-3 meses" },
-    { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" },
+   // { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" }, //Gabri
     { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
     { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ10.html' },
-    { playerId: 4, title: 'Duda', text: "Molestias musculares, 1-3 semanas" },
+   // { playerId: 4, title: 'Duda', text: "Molestias musculares, 1-3 semanas" }, //Luisja
     { playerId: null, title: 'Jornada 9', text: "EE PP San Fernando Escolapios Pozuelo 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ9.html' },
-   // { playerId: 16, title: 'Duda', text: "Lesión en los isquios, desconocido" }, // Á. Brito
     { playerId: null, title: 'Jornada 8', text: "E.F.M.O. Boadilla 'B' 2-2 CDE Aupa - Mentema Boadilla 'A'", url: 'InformeJ8.html' },
    // { playerId: 3, title: 'Duda', text: "Esguince de tobillo y molestias en el cuello, desconocido" }, //Álvaro
     { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
-   // { playerId: 18, title: 'Duda', text: "Molestias en el tobillo, 3-4 semanas" }, //J. Pardo
    // { playerId: 6, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Rafa
     { playerId: null, title: 'Jornada 6', text: "E.F.M.O. Boadilla 'B' 2-1 CD Prodet Pozuelo", url: 'InformeJ6.html' },
     { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 6-8 semanas" },
     { playerId: null, title: 'Jornada 5', text: "CD Retamar 3-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ5.html' },
     { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
     { playerId: 8, title: 'Duda', text: "Pubalgia, 7-10 semanas" },
-    { playerId: 24, title: 'Duda', text: "Edema óseo, 9-10 semanas" },
-    { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 9-10 semanas" },
+   // { playerId: 24, title: 'Duda', text: "Edema óseo, 9-10 semanas" }, //Manu de Vicente
+   // { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 9-10 semanas" }, //Adriano
     { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo CD 'B' 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ3.html' },
     { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 12-14 semanas" },
     { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones", url: 'InformeJ2.html' },
