--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -832,7 +832,7 @@
   // Datos de jugadores y noticias
   // {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'}
   const players = [
-    { id:1, name:'J. Agudo', pos:'Portero', status:'Lesionado', special: false, performances:[
+    { id:1, name:'J. Agudo', pos:'Portero', status:'Duda', special: false, performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:54, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
@@ -892,7 +892,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'}
       ]},
 
-    { id:5, name:'J. Martínez', pos:'Centrocampista', status:'Lesionado', special: false, performances:[
+    { id:5, name:'J. Martínez', pos:'Centrocampista', status:'Duda', special: false, performances:[
         {points:3, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,7)'},
         {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (Sin grabación)'},
         {points:9, minutes:63, goals:1, assists:0, cards:0, comment:'↪️⚽ (7,3+⚽)'},
@@ -937,7 +937,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
-    { id:8, name:'Rodri', pos:'Defensa', status:'Duda', special: false, performances:[
+    { id:8, name:'Rodri', pos:'Defensa', status:'OK', special: false, performances:[
         {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'},
         {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(Sin grabación)'},
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
@@ -952,7 +952,7 @@
         {points:-2, minutes:90, goals:0, assists:0, cards:0, comment:'(5,6)'}
       ]},
 
-    { id:9, name:'Adriano', pos:'Defensa', status:'OK', special: false, performances:[
+    { id:9, name:'Adriano', pos:'Defensa', status:'Duda', special: false, performances:[
         {points:9, minutes:90, goals:0, assists:0, cards:0, comment:'(7,8)'},
         {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (Sin grabación)'},
         {points:2, minutes:27, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
@@ -982,7 +982,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'}
       ]},
 
-    { id:11, name:'A. Molina', pos:'Centrocampista', status:'OK', special: false, performances:[
+    { id:11, name:'A. Molina', pos:'Centrocampista', status:'Duda', special: false, performances:[
         {points:4, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
         {points:null, minutes:75, goals:0, assists:0, cards:0, comment:'↪️ (Sin grabación)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
@@ -1162,7 +1162,7 @@
         {points:4, minutes:74, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'}
       ]},
 
-    { id:23, name:'Manu Medina', pos:'Atacante', status:'Lesionado', special: false, performances:[
+    { id:23, name:'Manu Medina', pos:'Atacante', status:'Duda', special: false, performances:[
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
@@ -1228,8 +1228,9 @@
     { playerId: 22, title: 'Lesión', text: "Esguince de tobillo, 1-3 semanas" },
     { playerId: null, title: 'Stats J8', text: "Estadísticas detalladas de la J8", url: 'StatsJ8.html' },
     { playerId: null, title: 'Jornada 12', text: "E.F.M.O. Boadilla 'B' 1-6 UD Las Matas CF", url: 'InformeJ12.html' },
-    { playerId: 5, title: 'Lesión', text: "Lesión de tobillo, desconocido" },
-    { playerId: 23, title: 'Lesión', text: "Fisura de peroné, 1-3 meses" },
+    { playerId: 11, title: 'Duda', text: "Molestias de tobillo, 1-2 semanas" },
+    { playerId: 5, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" },
+    { playerId: 23, title: 'Duda', text: "Fisura de peroné, 1-3 meses" },
    // { playerId: 2, title: 'Duda', text: "Golpe en la cadera, 6-10 días" }, //Gabri
     { playerId: null, title: 'Jornada 11', text: "Escuela Europea CF 3-3 E.F.M.O. Boadilla 'B'", url: 'InformeJ11.html' },
     { playerId: null, title: 'Jornada 10', text: "E.F.M.O. Boadilla 'B' 1-1 CDE Delta Juventud FC", url: 'InformeJ10.html' },
@@ -1243,11 +1244,11 @@
     { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 6-8 semanas" },
     { playerId: null, title: 'Jornada 5', text: "CD Retamar 3-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ5.html' },
     { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
-    { playerId: 8, title: 'Duda', text: "Pubalgia, 7-10 semanas" },
+   // { playerId: 8, title: 'Duda', text: "Pubalgia, 7-10 semanas" }, //Rodri
    // { playerId: 24, title: 'Duda', text: "Edema óseo, 9-10 semanas" }, //Manu de Vicente
-   // { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 9-10 semanas" }, //Adriano
+    { playerId: 9, title: 'Duda', text: "Molestias en el talón y en la pierna, 3-4 meses" }, //Adriano
     { playerId: null, title: 'Jornada 3', text: "Gimnástica Colmenarejo CD 'B' 4-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ3.html' },
-    { playerId: 1, title: 'Lesión', text: "Rotura fibrilar en el cuádriceps, 12-14 semanas" },
+    { playerId: 1, title: 'Duda', text: "Rotura fibrilar en el cuádriceps, 12-14 semanas" },
     { playerId: null, title: 'Jornada 2', text: "E.F.M.O. Boadilla 'B' 1-3 CDE F.B. Dptvo. Torrelodones", url: 'InformeJ2.html' },
     { playerId: null, title: 'Jornada 1', text: "CF Rayo Majadahonda-Internacional 'B' 1-0 E.F.M.O. Boadilla 'B'", url: 'InformeJ1.html' },
     { playerId: null, title: 'Lesiones', text: "Para ver las lesiones o dudas, clica en el jugador y verás la información sobre su estado" }
