--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1241,7 +1241,7 @@
     { playerId: null, title: 'Jornada 7', text: "CDE Fútbol Club Samba-Las Rozas 1-1 E.F.M.O. Boadilla 'B'", url: 'InformeJ7.html' },
    // { playerId: 6, title: 'Duda', text: "Lesión de tobillo, 3-5 semanas" }, //Rafa
     { playerId: null, title: 'Jornada 6', text: "E.F.M.O. Boadilla 'B' 2-1 CD Prodet Pozuelo", url: 'InformeJ6.html' },
-    { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 6-8 semanas" },
+    { playerId: 12, title: 'Lesión', text: "Luxación de rodilla, 4-5 meses" },
     { playerId: null, title: 'Jornada 5', text: "CD Retamar 3-2 E.F.M.O. Boadilla 'B'", url: 'InformeJ5.html' },
     { playerId: null, title: 'Jornada 4', text: "E.F.M.O. Boadilla 'B' 0-1 CD Puerta de Madrid 'B'", url: 'InformeJ4.html' },
    // { playerId: 8, title: 'Duda', text: "Pubalgia, 7-10 semanas" }, //Rodri
