--- a/InformeJ13.html
+++ b/InformeJ13.html
@@ -617,7 +617,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 13</h1>
-    <div class="resultado-principal">CDE Colegio Juan Pablo II - EFMO Boadilla 'B'</div>
+    <div class="resultado-principal">CDE Colegio Juan Pablo II 4-1 EFMO Boadilla 'B'</div>
   </div>
 
   <!-- Alineación Probable -->
