--- a/InformeJ14.html
+++ b/InformeJ14.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Informe Jornada </title> //Añadir nº de jornada
+  <title>Informe Jornada 14</title> <!-- Añadir nº de jornada -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap');
@@ -617,14 +617,14 @@
   <a href="InformesPost_partido.html" class="btn-volver">← Volver a Todos los Informes</a>
 
   <div class="header-informe">
-    <h1>Informe Jornada 12</h1> //Añadir nº de jornada
-    <div class="resultado-principal">EFMO Boadilla 'B'</div> //Añadir rival y resultado
+    <h1>Informe Jornada 14</h1> <!-- Añadir nº de jornada -->
+    <div class="resultado-principal">CD Galapagar 'C' - EFMO Boadilla 'B'</div> <!-- Añadir rival y resultado -->
   </div>
 
   <!-- Alineación Probable -->
   <div class="seccion">
     <h3>Alineación Probable</h3>
-    <div class="formacion-titulo">4-5-1</div> //Cambiar formación en caso necesario
+    <div class="formacion-titulo">4-5-1</div> <!-- Cambiar formación en caso necesario -->
 
     <div class="field-container-responsive">
       <div class="field-responsive">
@@ -660,7 +660,7 @@
         ] //El último sin coma
       };
       
-      // Configuraciones de formaciones //Cambiar formación en caso necesario
+      // Configuraciones de formaciones <!-- Cambiar formación en caso necesario -->
       const formations = {
         '4-5-1': [
           playersProbable.delanteros,
@@ -697,8 +697,8 @@
         });
       }
 
-      // Renderizar formación para alineación probable
-      renderFormationProbable('4-5-1'); //Cambiar formación en caso necesario
+      // Renderizar formación para alineación probable <!-- Cambiar formación en caso necesario -->
+      renderFormationProbable('4-5-1');
     </script>
   </div>
   
