--- a/InformeJ13.html
+++ b/InformeJ13.html
@@ -708,7 +708,7 @@
     <div class="container-responsive">
       <div class="header-responsive">
         <div class="team-name-responsive">E.F.M.O. Boadilla</div>
-        <div class="formation-responsive">4-5-1</div> //Cambiar formación en caso necesario
+        <div class="formation-responsive">4-5-1</div>
       </div>
 
       <div class="content-responsive">
@@ -765,7 +765,7 @@
         { number: '18', name: 'Manu de V.', rating: '6,4', goals: 0, assists: 0, cards: null }
       ]; //El último sin coma
 
-      // Configuraciones de formaciones //Cambiar formación en caso necesario
+      // Configuraciones de formaciones
       const formationsConfirmada = {
         '4-5-1': [
           playersConfirmada.delanteros,
@@ -917,7 +917,7 @@
         });
       }
 
-      renderFormationConfirmada('4-5-1'); //Cambiar formación en caso necesario
+      renderFormationConfirmada('4-5-1');
       renderBench();
     </script>
   </div>
@@ -974,7 +974,7 @@
   <!-- Once Final -->
   <div class="seccion">
     <h3>Once Final</h3>
-    <div class="formacion-titulo">3-5-2</div> //Cambiar formación en caso necesario
+    <div class="formacion-titulo">3-5-2</div>
 
     <div class="field-container-responsive">
       <div class="field-responsive">
@@ -1010,7 +1010,7 @@
         ] //El último sin coma
       };
 
-      // Configuraciones de formaciones //Cambiar formación en caso necesario
+      // Configuraciones de formaciones
       const formationsFinal = {
         '3-5-2': [
           playersFinal.delanteros,
@@ -1048,7 +1048,7 @@
       }
 
       // Renderizar formación para once final
-      renderFormationFinal('3-5-2'); //Cambiar formación en caso necesario
+      renderFormationFinal('3-5-2');
     </script>
   </div>
 
