--- a/InformeJ14.html
+++ b/InformeJ14.html
@@ -656,7 +656,7 @@
           { number: '14', name: 'J. Ogayar' }
         ], //El último sin coma
         'delanteros': [
-          { number: '9', name: 'S, Griñán' }
+          { number: '9', name: 'S. Griñán' }
         ] //El último sin coma
       };
       
