--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -155,10 +155,17 @@
 
 <section class="timeline">
   <div class="card">
+    <img src="Jornada15.jpg" alt="Jornada 15">
+    <div class="info">
+      <h2>Jornada 15</h2>
+      <a href="InformeJ15.html">Ver Alineación Probable</a>
+    </div>
+  </div>
+  <div class="card">
     <img src="Jornada14.jpg" alt="Jornada 14">
     <div class="info">
       <h2>Jornada 14</h2>
-      <a href="InformeJ14.html">Ver Alineación Probable</a>
+      <a href="InformeJ14.html">Ver Informe</a>
     </div>
   </div>
   <div class="card">
