--- a/InformeJ14.html
+++ b/InformeJ14.html
@@ -618,7 +618,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 14</h1> <!-- Añadir nº de jornada -->
-    <div class="resultado-principal">CD Galapagar 'C' - EFMO Boadilla 'B'</div> <!-- Añadir rival y resultado -->
+    <div class="resultado-principal">CD Galapagar 'C' 4-1 EFMO Boadilla 'B'</div> <!-- Añadir rival y resultado -->
   </div>
 
   <!-- Alineación Probable -->
